add Action request to schema
