# api/models/actions_get_response.go
@@ -11,13 +11,12 @@ import (
 
 	"github.com/go-openapi/errors"
 	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
 )
 
 // ActionsGetResponse actions get response
 //
 // swagger:model ActionsGetResponse
-type ActionsGetResponse []map[string]ActionsGetResponseAnon
+type ActionsGetResponse []ActionObject
 
 // Validate validates this actions get response
 func (m ActionsGetResponse) Validate(formats strfmt.Registry) error {
@@ -25,22 +24,15 @@ func (m ActionsGetResponse) Validate(formats strfmt.Registry) error {
 
 	for i := 0; i < len(m); i++ {
 
-		for k := range m[i] {
-
-			if swag.IsZero(m[i][k]) { // not required
-				continue
-			}
-			if val, ok := m[i][k]; ok {
-				if err := val.Validate(formats); err != nil {
-					if ve, ok := err.(*errors.Validation); ok {
-						return ve.ValidateName(strconv.Itoa(i) + "." + k)
-					} else if ce, ok := err.(*errors.CompositeError); ok {
-						return ce.ValidateName(strconv.Itoa(i) + "." + k)
-					}
-					return err
+		if m[i] != nil {
+			if err := m[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName(strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName(strconv.Itoa(i))
 				}
+				return err
 			}
-
 		}
 
 	}
@@ -57,14 +49,13 @@ func (m ActionsGetResponse) ContextValidate(ctx context.Context, formats strfmt.
 
 	for i := 0; i < len(m); i++ {
 
-		for k := range m[i] {
-
-			if val, ok := m[i][k]; ok {
-				if err := val.ContextValidate(ctx, formats); err != nil {
-					return err
-				}
+		if err := m[i].ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName(strconv.Itoa(i))
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName(strconv.Itoa(i))
 			}
-
+			return err
 		}
 
 	}
@@ -72,51 +63,5 @@ func (m ActionsGetResponse) ContextValidate(ctx context.Context, formats strfmt.
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
-	return nil
-}
-
-// ActionsGetResponseAnon actions get response anon
-//
-// swagger:model ActionsGetResponseAnon
-type ActionsGetResponseAnon struct {
-
-	// href
-	Href string `json:"href,omitempty"`
-
-	// input
-	Input map[string]string `json:"input,omitempty"`
-
-	// status
-	Status string `json:"status,omitempty"`
-
-	// time requested
-	TimeRequested string `json:"timeRequested,omitempty"`
-}
-
-// Validate validates this actions get response anon
-func (m *ActionsGetResponseAnon) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this actions get response anon based on context it is used
-func (m *ActionsGetResponseAnon) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *ActionsGetResponseAnon) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *ActionsGetResponseAnon) UnmarshalBinary(b []byte) error {
-	var res ActionsGetResponseAnon
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
 	return nil
 }
